<resources>
    <string name="app_name">LABIII_2025_InmobiliariaGarciaJesus</string>
    <string name="btLogin">Ingresar</string>
    <string name="edUser">Usuario: \"user\"</string>
    <string name="edPass">Clave:\"123\"</string>
    <string name="tvBienvenido">¡Bienvenido!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">LABIII_2025_InmobiliariaGarciaJesus</string>
    <string name="nav_header_subtitle">user@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_ubicacion">Inicio</string>
    <string name="menu_musica">Musica</string>
    <string name="menu_salir">Salir</string>
    <string name="bt_play">Reproducir</string>
    <string name="tv_play">Reproducir</string>
    <string name="tvMusica">Mi Música</string>
    <string name="btPlay">Reproducir</string>
    <string name="btStop">Detener</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_inmuebles">Inmuebles</string>
    <string name="menu_inquilinos">Inquilinos</string>
    <string name="menu_contratos">Contratos</string>
    <string name="menu_notificaciones">Notificaciones</string>

</resources>