<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/menu_inicio"
            android:icon="@drawable/ic_map"
            android:title="@string/menu_ubicacion" />
        <item
            android:id="@+id/menu_perfil"
            android:icon="@drawable/ic_profile"
            android:title="@string/menu_perfil" />
        <item
            android:id="@+id/menu_inmuebles"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_inmuebles" />
        <item
            android:id="@+id/menu_inquilinos"
            android:icon="@drawable/ic_people"
            android:title="@string/menu_inquilinos" />
        <item
            android:id="@+id/menu_contratos"
            android:icon="@drawable/ic_contract"
            android:title="@string/menu_contratos" />
        <item
            android:id="@+id/menu_notificaciones"
            android:icon="@android:drawable/ic_popup_reminder"
            android:title="@string/menu_notificaciones" />
    </group>
    <item
        android:id="@+id/menu_salir"
        android:icon="@drawable/ic_exit"
        android:title="@string/menu_salir" />
</menu>