<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/menu_ubicacion">

    <fragment
        android:id="@+id/menu_ubicacion"
        android:name="com.example.tp07_login_menu_geolocalizacion_musica.ui.ubicacion.UbicacionFragment"
        android:label="@string/menu_ubicacion"
        tools:layout="@layout/fragment_ubicacion" />

    <fragment
        android:id="@+id/menu_musica"
        android:name="com.example.tp07_login_menu_geolocalizacion_musica.ui.musica.MusicaFragment"
        android:label="@string/menu_musica"
        tools:layout="@layout/fragment_musica" />

    <fragment
        android:id="@+id/menu_salir"
        android:name="com.example.tp07_login_menu_geolocalizacion_musica.ui.salir.SalirFragment"
        android:label="@string/menu_salir"
        tools:layout="@layout/fragment_salir" />
</navigation>