<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.musica.MusicaFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/tvMusica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="25dp"
            android:layout_marginEnd="8dp"
            android:textAlignment="center"
            android:textSize="35sp"
            android:text="@string/tvMusica"
            android:textStyle="bold"
            />


        <ImageView
            android:id="@+id/ivImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tvMusica"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:src="@drawable/fortunate_son"
        />

        <Button
            android:id="@+id/btPlay"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/btPlay"
            android:layout_below="@id/ivImage"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btStop"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/btPlay"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="8dp"
            android:text="@string/btStop"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btPlay" />
    </RelativeLayout>

</FrameLayout>